--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,270 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap-sprockets";
+ @import "bootstrap";
+
+html, body {
+          font-family: 'Josefin', sans-serif
+}
+
+ body {  
+  background-color: #EEE;
+  font-family: 'Josefin Sans';
+ }
+
+ .alert {
+  margin-bottom: 0px;
+}
+
+ /* ## NAVBAR CUSTOMISATIONS ## */
+
+ .navbar {
+  margin-bottom: 0px;
+}
+
+ .navbar-brand {
+  a {
+    color: #FFFFFF;
+    font-size: 34px;
+    min-width: 300px;
+    position: relative;
+    height: 100%;
+  }
+ }
+
+ .navbar-default {
+  background-color: #000000;
+  height: 108px;
+  .navbar-nav li a {
+  color: #FFFFFF;
+  }
+ }
+
+ .navbar-container {
+  width: 620px;
+  margin: 0 auto;
+  margin-top: 35px;
+  margin-bottom: 35px;
+ }
+
+ /* ## POST CUSTOMISATIONS ## */
+
+ .posts-wrapper {
+  padding-top: 40px;
+  margin: 0 auto;
+  max-width: 642px;
+  width: 100%;
+  height: 60px;
+ }
+
+ .post {
+  background-color: #fff;
+  border-color: #000000;
+  border-style: solid;
+  border-radius: 3px;
+  border-width: 0px;
+  margin-bottom: -1px;
+  }
+
+  .post-head {
+    flex-direction: row;
+    height: 64px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 24px;
+    color: #000000;
+    font-size: 15px;
+    line-height: 18px;
+    .user-name, .time-ago {
+      display: inline;
+  }
+    .thumb-image {}
+    .user-name {
+      font-weight: 500;
+  }
+    .time-ago {
+      color: #A5A7AA;
+      float: right;
+    }
+    }
+  .image {
+    border-bottom: 1px solid #eeefef;
+    border-top: 1px solid #eeefef;
+  }
+
+ .post-bottom {
+  .user-name, .comment-content {
+    display: inline;
+  }
+  .caption {
+    margin-bottom: 7px;
+  }
+  .user-name {
+    font-weight: 500;
+    margin-right: 0.3em;
+    color: #125688;
+    font-size: 15px;
+  }
+  .supertitle-content {
+    margin-bottom: 7px;
+  }
+  .user-name, .supertitle-content {
+    display: inline;
+  }
+  .comment {
+  margin-bottom: 7px;
+  .user-name {
+  font-weight: 500;
+  margin-right: 0.3em;
+    }
+    #comment_content {
+      font-size: 15px;
+      line-height: 18px;
+      border: medium none;
+      width: 100%;
+      color: #4B4F54;
+    }
+    .delete-comment {
+      float: right;
+      color: #515151;
+    }
+  }
+
+ }
+
+ .comment-like-form {
+  padding-top: 24px;
+  margin-top: 13px;
+  margin-left: 24px;
+  margin-right: 24px;
+  min-height: 68px;
+  align-items: center;
+  border-top: 1px solid #EEEFEF;
+  flex-direction: row;
+  justify-content: center;
+ }
+
+ /* ## Wrapper and styling for the new and edit views ## */
+
+ .form-wrapper {
+  width: 60%;
+  margin: 20px auto;
+  background-color: #fff;
+  padding: 40px;
+  border: 1px solid #eeefef;
+  border-radius: 3px;
+ }
+
+ .edit-links {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+
+.sm-img-container {
+  margin-top: 20px;
+  font-size: 0;
+}
+
+.sm-image {
+  width: 25%;
+  display: inline-block;
+}
+
+/* ## Wrapper and styling for the new, edit & devise views ## */
+
+.registration-bg {
+  padding-top: 4em;
+  height: 1150px;
+  background-image: image-url('silverfoxx.jpg');
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.login-bg {
+  padding-top: 4em;
+  height: 1170px;
+  width: 1170px;
+  background-image: image-url('grossi1.jpg');
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.log-in{
+  margin-left: auto;
+  margin-right: auto;
+  text-align:center;
+  border: none;
+}
+
+.panel {
+  border-radius: 8px;
+}
+
+.panel-heading{
+  h1 {
+    text-align: center;
+  }
+}
+
+#image-preview {
+  margin: 0px auto;
+}
+
+#post_image {
+  padding: 1em;
+  margin: 0px auto;
+}
+
+#uploaded_file-preview {
+  margin: 0px auto;
+}
+
+#upload_uploaded_file {
+  padding: 1em;
+  margin: 0px auto;
+}
+
+
+#paginator {
+  color: #4090DB;
+  height: 120px;
+  width: 120px;
+  margin: 60px auto 40px;
+  position: relative;
+  display: table;
+  border: 2px solid #4090DB;
+  border-radius: 50%;
+  :hover {
+    border: 1px solid #2D6DA8;
+    border-radius: 50%;
+  }
+}
+
+#load_more {
+  display: table-cell;
+  font-size: 12px;
+  padding: 0px 9px;
+  vertical-align: middle;
+  text-decoration: none;
+  a :hover {
+    color: #2D6DA8;
+  }
+}
+
+.comments {
+  .paginator {
+    margin: 0.5em;
+    .more-comments {
+      color: #A5A7AA;
+    }
+  }
+}
+  
+
+
