--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,1 +1,13 @@
-<h1>Hello<h1>
+<div class="form-wrapper">
+  <%= simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f| %>
+    <div class="form-group">
+      <%= f.input :image %>
+    </div>
+    <div class="form-group text-center">
+      <%= f.input :supertitle %>
+    </div>
+    <div class="form-group text-center">
+      <%= f.button :submit, class: 'btn-success' %>
+    </div>
+  <% end %>
+</div>
